; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_hal_sdio.c_rtw_hal_set_sdio_tx_max_length.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_hal_sdio.c_rtw_hal_set_sdio_tx_max_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.hal_com_data = type { i32* }

@HAL_DEF_TX_PAGE_SIZE = common dso_local global i32 0, align 4
@MAX_XMITBUF_SZ = common dso_local global i32 0, align 4
@HI_QUEUE_IDX = common dso_local global i64 0, align 8
@MID_QUEUE_IDX = common dso_local global i64 0, align 8
@LOW_QUEUE_IDX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtw_hal_set_sdio_tx_max_length(%struct.adapter* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.adapter*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.hal_com_data*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %16 = load %struct.adapter*, %struct.adapter** %6, align 8
  %17 = call %struct.hal_com_data* @GET_HAL_DATA(%struct.adapter* %16)
  store %struct.hal_com_data* %17, %struct.hal_com_data** %11, align 8
  %18 = load %struct.adapter*, %struct.adapter** %6, align 8
  %19 = load i32, i32* @HAL_DEF_TX_PAGE_SIZE, align 4
  %20 = call i32 @rtw_hal_get_def_var(%struct.adapter* %18, i32 %19, i32* %12)
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %10, align 4
  %23 = add nsw i32 %21, %22
  %24 = ashr i32 %23, 1
  %25 = load i32, i32* %12, align 4
  %26 = mul nsw i32 %24, %25
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %10, align 4
  %29 = add nsw i32 %27, %28
  %30 = ashr i32 %29, 1
  %31 = load i32, i32* %12, align 4
  %32 = mul nsw i32 %30, %31
  store i32 %32, i32* %14, align 4
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* %10, align 4
  %35 = add nsw i32 %33, %34
  %36 = ashr i32 %35, 1
  %37 = load i32, i32* %12, align 4
  %38 = mul nsw i32 %36, %37
  store i32 %38, i32* %15, align 4
  %39 = load i32, i32* %13, align 4
  %40 = load i32, i32* @MAX_XMITBUF_SZ, align 4
  %41 = icmp sgt i32 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %5
  %43 = load i32, i32* @MAX_XMITBUF_SZ, align 4
  br label %46

44:                                               ; preds = %5
  %45 = load i32, i32* %13, align 4
  br label %46

46:                                               ; preds = %44, %42
  %47 = phi i32 [ %43, %42 ], [ %45, %44 ]
  %48 = load %struct.hal_com_data*, %struct.hal_com_data** %11, align 8
  %49 = getelementptr inbounds %struct.hal_com_data, %struct.hal_com_data* %48, i32 0, i32 0
  %50 = load i32*, i32** %49, align 8
  %51 = load i64, i64* @HI_QUEUE_IDX, align 8
  %52 = getelementptr inbounds i32, i32* %50, i64 %51
  store i32 %47, i32* %52, align 4
  %53 = load i32, i32* %14, align 4
  %54 = load i32, i32* @MAX_XMITBUF_SZ, align 4
  %55 = icmp sgt i32 %53, %54
  br i1 %55, label %56, label %58

56:                                               ; preds = %46
  %57 = load i32, i32* @MAX_XMITBUF_SZ, align 4
  br label %60

58:                                               ; preds = %46
  %59 = load i32, i32* %14, align 4
  br label %60

60:                                               ; preds = %58, %56
  %61 = phi i32 [ %57, %56 ], [ %59, %58 ]
  %62 = load %struct.hal_com_data*, %struct.hal_com_data** %11, align 8
  %63 = getelementptr inbounds %struct.hal_com_data, %struct.hal_com_data* %62, i32 0, i32 0
  %64 = load i32*, i32** %63, align 8
  %65 = load i64, i64* @MID_QUEUE_IDX, align 8
  %66 = getelementptr inbounds i32, i32* %64, i64 %65
  store i32 %61, i32* %66, align 4
  %67 = load i32, i32* %15, align 4
  %68 = load i32, i32* @MAX_XMITBUF_SZ, align 4
  %69 = icmp sgt i32 %67, %68
  br i1 %69, label %70, label %72

70:                                               ; preds = %60
  %71 = load i32, i32* @MAX_XMITBUF_SZ, align 4
  br label %74

72:                                               ; preds = %60
  %73 = load i32, i32* %15, align 4
  br label %74

74:                                               ; preds = %72, %70
  %75 = phi i32 [ %71, %70 ], [ %73, %72 ]
  %76 = load %struct.hal_com_data*, %struct.hal_com_data** %11, align 8
  %77 = getelementptr inbounds %struct.hal_com_data, %struct.hal_com_data* %76, i32 0, i32 0
  %78 = load i32*, i32** %77, align 8
  %79 = load i64, i64* @LOW_QUEUE_IDX, align 8
  %80 = getelementptr inbounds i32, i32* %78, i64 %79
  store i32 %75, i32* %80, align 4
  ret void
}

declare dso_local %struct.hal_com_data* @GET_HAL_DATA(%struct.adapter*) #1

declare dso_local i32 @rtw_hal_get_def_var(%struct.adapter*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
